fixed edit task page not showing up after sign out

--- a/Css/modules.css
+++ b/Css/modules.css
@@ -351,6 +351,7 @@ header h1 {
   text-align: center;
   /*border: solid yellow;*/
   color: #efefef;
+  z-index: 100;
 }
 
 #manDutiesPage {
